# revision-tracker

./: .env.example  .gitignore  DEPLOYMENT.md  INFINITE_REVISIONS.md  NAVIGATION_UPDATE.md  PAGINATION_AND_STREAKS.md  QUICK_START.md  README.md  REVISION_SCHEDULE_CUMULATIVE.md  REVISION_SCHEDULE_UPDATE.md  STREAK_SYSTEM.md  TOPICS_MANAGEMENT.md  dump.sql  pyproject.toml  render.yaml
.claude/: settings.json
.github/workflows/: db-backup.yml  keep-warm.yml
backend/: database.py  main.py  models.py  pyproject.toml  requirements.txt  scheduler.py  schemas.py  streak_calculator.py  test_revision_schedule.py  test_streaks.py  utils.py
frontend/: generate-pwa-assets.js  next.config.js  package-lock.json  package.json
frontend/app/: api.ts  globals.css  layout.tsx  page.tsx  types.ts  useAuth.ts
frontend/app/calendar/: page.tsx
frontend/app/list/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: CalendarGrid.tsx  CompletionCelebration.tsx  ConfirmModal.tsx  CopyDayModal.tsx  CountUp.tsx  DateModal.tsx  DayRing.tsx  InputModal.tsx  LoginForm.tsx  ModalShell.tsx  MonthYearPicker.tsx  Navigation.tsx  PWARegister.tsx  ProgressBar.tsx  ProgressRing.tsx  Providers.tsx  ReminderCard.tsx  ReminderScheduler.tsx  ScheduleBlockModal.tsx  StatsCard.tsx  StreakDisplay.tsx  TiltCard.tsx  TodayWidget.tsx  TopicChecklist.tsx  TopicForm.tsx  TopicScheduleEditor.tsx  UpcomingList.tsx  icons.tsx
frontend/hooks/: useAPI.ts  useDarkMode.ts
frontend/lib/: category.ts  motion.ts  notifications.ts  schedule.ts
frontend/public/: generate-icons.sh  manifest.json  sw.js
(+6 files in other folders)
