[project]
name = "revision-planner"
version = "0.1.0"
description = "Spaced repetition revision planner with calendar and streak tracking"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.9",
    "uvicorn>=0.23.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.45",
]
