[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",

    # Auth
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",

    # Env / forms
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",

    # App utilities
    "python-dateutil>=2.9.0.post0",
    "resend>=2.19.0",
]
